--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -4,10 +4,11 @@
   }
   
   .about-section {
-    background-color: #f9f9f9;
-    padding: 20px;
+    background-color:#F0F0DA;
+    padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: 2px solid black;
   }
   
   .about-section h2 {
@@ -19,4 +20,20 @@
     color: #333;
     line-height: 1.6;
     margin-bottom: 10px;
+    font-weight: bolder ;
   }
+
+  /* Responsive design for mobile */
+@media (max-width: 600px) {
+  .about-section {
+      padding: 10px; /* Further reduced padding for mobile */
+  }
+
+  .about-section h2 {
+      font-size: 1.5em; /* Adjust font size for mobile */
+  }
+
+  .about-section p {
+      font-size: 1em; /* Adjust font size for mobile */
+  }
+}
