--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -23,6 +23,12 @@
     font-weight: bolder ;
   }
 
+  /* Style for links within the about-section */
+.about-section a {
+  font-weight: bold;
+  color: #0a11c7; 
+}
+
   /* Responsive design for mobile */
 @media (max-width: 600px) {
   .about-section {
