--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,24 +1,19 @@
-.container-fluid {
-  position: relative; /* Ensure the pseudo-element is positioned correctly */
-  padding: 10px;
-  border-bottom: 2px solid black;
-  background-image: url('/public/header.png');
-  background-size: cover; /* Ensure the image covers the entire container */
-  background-position: center; /* Center the background image */
-  background-repeat: no-repeat; /* Prevent the image from repeating */
-}
-.container-fluid::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
+header {
   width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.4); 
-  pointer-events: none; 
+  box-sizing: border-box;
+  background-color: #ffffff; /* Or your desired background color */
+  border-bottom: 1px solid #ddd; /* Optional border */
+  padding: 0 20px;
 }
 
-.brand-container {
+.container-fluid {
+  width: 100%;
+  padding: 0 15px; /* Adjust padding as needed */
+  margin: 0 auto;
+}
+
+
+ .brand-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,6 +24,9 @@
   z-index: 1; /* Ensure content is above the overlay */
 }
 
+
+
+
 .logo {
   width: 280px; 
   height: 280px; 
@@ -37,33 +35,28 @@
   background-color: transparent;
   border: 4px solid black;
 }
-
 .nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* Vertically center the nav links */
   width: 100%;
-  margin-top: auto; /* Push the nav links down */
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Adjust as needed */
 }
+
+
+
+
 
 .nav-group {
   display: flex;
   gap: 10px;
 }
 
-.text-center {
-  font-size: 1.7em;
-  color: white;
-  font-weight: bold;
-  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.9); 
 
-}
 
 .nav-link {
   position: relative;
   padding: 0 10px;
   font-weight: bolder;
-  font-size: medium;
   text-decoration: none;
   color: white;
   font-size: 1.2em;
