--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,23 +12,21 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* index.css */
+
+
 
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+
 
 h1 {
   font-size: 3.2em;
@@ -46,9 +44,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,10 +59,109 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
+  }
+}
+
+/* Global styles */
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(240, 239, 239);
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgb(240, 239, 239);
+
+}
+
+.main-content {
+  flex: 1;
+  padding-bottom: 40px;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+header,
+footer {
+  flex-shrink: 0;
+  /* Prevent the header from shrinking */
+  width: 100%;
+  /* Ensure header and footer take full width */
+  box-sizing: border-box;
+
+
+}
+
+.text-center {
+  font-size: 1.7em;
+  color: white;
+  font-weight: bold;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.9);
+}
+
+
+
+.copyright {
+  font-size: 0.8em;
+  color: black;
+}
+
+.container-fluid {
+  position: relative;
+  /* Ensure the pseudo-element is positioned correctly */
+  padding: 10px;
+  border-bottom: 2px solid black;
+  background-image: url('/header.png');
+  background-size: cover;
+  /* Ensure the image covers the entire container */
+  background-position: center;
+  /* Center the background image */
+  background-repeat: no-repeat;
+  /* Prevent the image from repeating */
+}
+
+.container-fluid::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.4);
+  pointer-events: none;
+}
+
+.footer.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+@media (max-width: 768px) {
+  .app-container {
+    padding: 10px
+  }
+
+  @media(min-width: 769px) {
+    .app-container {
+      padding: 20px;
+    }
   }
 }
