--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,6 +84,7 @@ html {
 .app-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   min-height: 100vh;
   background-color: rgb(240, 239, 239);
@@ -158,10 +159,9 @@ footer {
   .app-container {
     padding: 10px
   }
-
+}
   @media(min-width: 769px) {
     .app-container {
       padding: 20px;
     }
   }
-}
