--- a/client/src/pages/PrivacyTerms.css
+++ b/client/src/pages/PrivacyTerms.css
@@ -20,3 +20,12 @@
     line-height: 1.5;
     margin-bottom: 20px;
   }
+
+  .bold-number {
+    font-weight: bolder
+  }
+
+  .effective-date {
+    font-weight: bolder;
+    font-style: italic;
+  }
