--- a/client/src/pages/User.css
+++ b/client/src/pages/User.css
@@ -8,6 +8,9 @@
 .accordion .accordion-button {
     font-weight: bold !important;
     font-style: italic;
+    background-color: #c5e2ef;
+    border: 2px solid black;
+    font-size: 20px;
 }
 
 .effective-date {
@@ -23,4 +26,20 @@
     color:black;
     font-weight: bold;
     text-align: justify;
+    border-bottom: dashed 2px black;
+}
+
+.red-bold-item {
+    color: red;
+    font-weight: bold;
+}
+
+.black-bold-numbers li::marker {
+    font-weight: bold;
+    color: black;
+}
+
+.info-item{
+    font-weight: bold;
+    color: black;
 }
