--- a/client/src/pages/CandleCare.css
+++ b/client/src/pages/CandleCare.css
@@ -14,7 +14,9 @@
 
 .candle-care-list li {
   margin-bottom: 5px;
-  padding-left: 0;
+  padding-left: 20px;
+  text-align: left;
+
 }
 
 .candle-care {
@@ -27,7 +29,6 @@
   flex-direction: column;
   align-items: center;
   border: 2px solid black;
-
 }
 
 .candle-care h2 {
